<resources>
    <string name="app_name">SMB Steamer</string>
    <string name="title_activity_server" translatable="false">@string/app_name</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_file_list">Files</string>
    <string name="action_add">Add</string>
    <string name="title_add_server">Add server</string>
    <string name="hint_hostname_or_ip">Hostname/IP</string>
    <string name="btn_browse">Browse</string>
    <string name="hint_share_name">Share name</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="hint_anonymous">Anonymous user</string>
    <string name="hint_display_name">Display name</string>
</resources>
